// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParticipantForm renders participant form component 1`] = `
<div>
  <p>
     
     
  </p>
  <input
    onClick={[Function]}
    type="button"
    value="このイベントに参加する"
  />
</div>
`;

exports[`ParticipantForm renders participant form component with completion message 1`] = `
<div>
  <p>
     
    参加登録が完了しました。
     
  </p>
  <input
    onClick={[Function]}
    type="button"
    value="このイベントに参加する"
  />
</div>
`;

exports[`ParticipantForm renders participant form component with error message 1`] = `
<div>
  <p>
     
     
  </p>
  <input
    onClick={[Function]}
    type="button"
    value="このイベントに参加する"
  />
</div>
`;
